# pyNEUNET-Detector

./: LICENSE  README.md  pyproject.toml
src/MIT-Neutron-Diffractometer/: 3he_detector_reader.py  connection.py  translaters.py  version.py
src/pyNEUNET/: 3he_detector_reader.py  __init__.py  _version.py  analysis.py  communications.py  detectors.py  tcp_reader.py  translaters.py  translators.py  version.py
tests/: pulse_left_right_testing.py  raw_data_testing.py  testing_TCP.ipynb  testing_UDP.ipynb
