[project]
name = "MIT-Neutron-Diffractometer"
version = "0.1.0"
# dynamic = ["version"]
authors = [
  { name="Sean Fayfar", email="sfayfar@mit.edu" },
  { name="Sabine Chu", email="srchu@mit.edu"}
]
description = "Software to control hardware at MITR"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/sfayfar/MIT-Neutron-Diffractometer.git"
"Bug Tracker" = "https://github.com/sfayfar/MIT-Neutron-Diffractometer/issues"


[options]
packages = "find:"
python_requires = ">=3.7"
setup_requires = "setuptools_scm"
package_dir = "src"
include_package_data = "True"
install_requires = [
    "numpy",
    "scipy",
    "pathlib",
    "lmfit",
    "uncertainties",
    "mendeleev"
]


[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/MIT-Neutron-Diffractometer/version.py"