[project]
name = "pyNEUNET"
version = "0.1.0"
# dynamic = ["version"]
authors = [
  { name="Sean Fayfar", email="sfayfar@mit.edu" },
  { name="Sabine Chu", email="srchu@mit.edu"}
]
description = "Software to control hardware at MITR"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "lmfit",
    "mendeleev"
]

[project.urls]
Homepage = "https://github.com/sfayfar/pyNEUNET-Detector.git"
"Bug Tracker" = "https://github.com/sfayfar/pyNEUNET-Detector/issues"



[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/pyNEUNET/_version.py"