[project]
name = "pyNEUNET"
version = "v0.1.0"
# dynamic = ["version"]
authors = [
  { name="Sean Fayfar", email="sfayfar@mit.edu" },
  { name="Sabine Chu", email="srchu@mit.edu"}
]
description = "Software to control hardware at MITR"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "lmfit",
    "mendeleev"
]

[project.urls]
Homepage = "https://github.com/sfayfar/pyNEUNET-Detector.git"
"Bug Tracker" = "https://github.com/sfayfar/pyNEUNET-Detector/issues"



[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"'
]
"src/pyNEUNET/__init__.py" = ['__version__ = "{version}"']
"README.md" = ['{version}']


[tool.bumpver]
current_version = "v0.1.0"
version_pattern = "vMAJOR.MINOR.PATCH[-TAGNUM]"
commit_message = "bump version to {new_version}"
commit = false
tag = false
push = false

# [tool.setuptools_scm]
# write_to = "src/pyNEUNET/_version.py"